// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeResults can merge 2 responses 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {},
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with absolute conflicts 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "12.0.1",
      "semver": "^12.0.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with absolute+semver conflicts, but same entries 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with conflicts recursively 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/11.0.2/lib/index.js": "yes yes 11.0.2",
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes c",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict1",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict2",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "conflict2": Object {
      "fbjs": "fbjs/11.0.2",
    },
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict1",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/11.0.2": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict2",
      ],
      "resolved": "11.0.2",
      "semver": "^11.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with full semver conflicts 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes 11",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "11.0.1",
      "semver": "^11.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with multiple conflicts 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict1",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict2",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict1",
        "conflict2",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with semver/absolute conflicts, but different entries 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes c",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;
